[gd_scene load_steps=4 format=3 uid="uid://bq2fk8j3hl2nc"]

[ext_resource type="Script" path="res://src/ui/components/ScoreDisplay.gd" id="1_score_display"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_background"]
bg_color = Color(0.1, 0.15, 0.25, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.4, 0.6, 0.6)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glow"]
bg_color = Color(0.4, 0.7, 1.0, 0.2)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="ScoreDisplay" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0
grow_horizontal = 0
script = ExtResource("1_score_display")

[node name="ScoreContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GlowEffect" type="Panel" parent="ScoreContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
theme_override_styles/panel = SubResource("StyleBoxFlat_glow")

[node name="Background" type="Panel" parent="ScoreContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_background")

[node name="VBox" type="VBoxContainer" parent="ScoreContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 8.0
offset_right = -12.0
offset_bottom = -8.0
alignment = 1

[node name="ScoreLabel" type="Label" parent="ScoreContainer/VBox"]
layout_mode = 2
text = "SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreValue" type="Label" parent="ScoreContainer/VBox"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiamondsInfo" type="Label" parent="ScoreContainer/VBox"]
layout_mode = 2
text = "ðŸ’Ž 0/0 (ðŸ”¥0 ðŸ’§0)"
horizontal_alignment = 1
vertical_alignment = 1 